--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* 设置背景图片 */
         body {
-            background-image: url('https://github.com/nanbing2xx/sxnx-app/raw/868d4d55e92714589d6cea1464873499d0de0a83/rwzxtz.png');
+            background-image: url('https://github.com/nanbing2xx/sxnx-app/blob/84990858631e535190f2eefbde879c1454d55425/12.jpg');
             background-size: cover; /* 背景图片自动调整大小，确保覆盖整个页面 */
             background-position: center; /* 背景图片居中显示 */
             background-repeat: no-repeat; /* 防止背景图片重复 */
